# YGC-SLAM

./: CMakeLists.txt  CameraTrajectory.txt  CameraTrajectory2.txt  FrameTrajectory.txt  low_dyna2.txt
Examples/Monocular/: mono_euroc.cc  mono_kitti.cc  mono_tum.cc
Examples/RGB-D/: TUM1_ros.yaml  astra.yaml  rgbd_tum.cc
Examples/ROS/ORB_SLAM2_yolov5/: CMakeLists.txt  RealsenseD435i.yaml  manifest.xml
Examples/ROS/ORB_SLAM2_yolov5/src/: ros_rgbd.cc
Examples/Stereo/: stereo_euroc.cc  stereo_kitti.cc
copy/: CMakeLists.txt  Frame.h  KeyFrame.h  Tracking.cc  YOLOV5.cpp  pointcloudmapping.cc
copy/include/: Frame.h  ORBextractor.h  System.h  Tracking.h  Viewer.h
copy/src/: ORBextractor.cc  System.cc  Tracking.cc  Viewer.cc  pointcloudmapping.h
include/: Detect.h  Frame.h  KeyFrame.h  LoopClosing.h  ORBextractor.h  System.h  Tracking.h  Viewer.h  pointcloudmapping.h
launch/: ORB_SLAM3.launch  Octomap.launch  bag.launch  d455.launch  local.launch  rbx1_bringup.launch  rgbd.launch  rgbdcorr.launch  rgbdslam7.launch  stereo.launch  transform.launch  transformcorr.launch  transformhmd.launch
src/: Detect.cpp  LoopClosing.cc  ORBextractor.cc  System.cc  Tracking.cc  Viewer.cc  pointcloudmapping.cc
